# maude-for-claude

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LAUNCH.md  LICENSE  Makefile  README.md  SECURITY.md  THIRD-PARTY-NOTICES  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  configuration.md  for-humans.html  governance.md  memory.md  quickstart.md
docs/superpowers/plans/: 2026-04-03-for-humans-explainer.md
docs/superpowers/specs/: 2026-04-03-for-humans-explainer-design.md
examples/governed-room/: config.yaml  pyproject.toml
examples/governed-room/hooks/: block-protected-paths.sh
examples/governed-room/src/governed_room/: __main__.py  server.py
examples/healing-room/: config.yaml  pyproject.toml
examples/healing-room/src/healing_room/: __main__.py  server.py
examples/hello-room/: config.yaml  pyproject.toml
examples/hello-room/src/hello_room/: __main__.py  server.py
examples/memory-room/: config.yaml  pyproject.toml
examples/memory-room/src/memory_room/: __init__.py  __main__.py  server.py
scripts/: scrub-check.sh  scrub-patterns.txt
skills/: README.md
skills/maude/: SKILL.md
src/maude/: __init__.py  claude_md.py  config.py  hooks.py  memory_budget.py  plans.py  resolve.py  sweep.py  testing.py
src/maude/analysis/: __init__.py  log_analyzer.py  trend_analyzer.py
src/maude/auth/: __init__.py  oidc.py
src/maude/control/: __init__.py  audit.py  briefing.py  health.py  session.py  tools.py
src/maude/coordination/: __init__.py  _governance.py  _memory_tools.py  _resources.py  _tools.py  agency.py  autonomy_metrics.py  briefing.py  briefing_analytics.py  cli.py  correlation.py  cross_room_memory.py  cross_site_memory.py  dependencies.py  diagnostic_trace.py  event_listener.py  fleet_deploy.py  mcp.py  relay.py  search.py  server.py  site_provision.py
src/maude/coordination/web/: __init__.py  app.py  state.py
src/maude/coordination/web/auth/: __init__.py  entra.py  middleware.py  roles.py
src/maude/coordination/web/chat/: __init__.py  agent.py  logger.py  (+2 more)
src/maude/daemon/: __init__.py  audit.py  card.py  common.py  config.py  deploy.py  executor.py  guards.py  kill_switch.py  metrics.py  ops.py  relay_buffer.py  relay_tools.py  resources.py  runner.py  security.py  session.py
src/maude/db/: __init__.py  formatting.py  pool.py
src/maude/eval/: __init__.py  benchmark.py  score.py
src/maude/governance/: __init__.py  accountability.yaml  amendments.md  protected-resources.md
src/maude/governance/constitution/: article-i-governance.md  article-ii-sovereignty.md  article-iii-accountability.md  article-iv-safety.md  article-v-credentials.md  article-vi-data.md  article-vii-enforcement.md  article-viii-amendments.md  bill-of-rights.md  digest.md  preamble.md
src/maude/governance/hooks/: block-sensitive-edits.sh  context-budget-monitor.sh  cross-room-guard.sh  enforce-authorship.sh  mcp-first-guard.sh  require-read-before-edit.sh  subagent-model-check.sh
src/maude/governance/standards/: authorship-headers.md  code-quality.md  commit-messages.md  dependency-management.md  logging.md  testing.md
src/maude/healing/: __init__.py  admin_registry.py  dependencies.py  dependencies.yaml  health_checks.py  health_loop.py  lifecycle.py  maude_client.py  model_manager.py  pattern_library.py  progress.py  room_agent.py  tool_registry.py
src/maude/healing/training/: __init__.py  export.py  filter.py  loop.py  promoter.py  session_distiller.py
src/maude/infra/: __init__.py  events.py  mailbox.py  redis_client.py
src/maude/llm/: __init__.py  guardrails.py  quality.py  router.py  tokens.py  types.py  vllm.py
src/maude/llm/guardrails_config/: config.yml  rails.colang
src/maude/memory/: __init__.py  audit.py  consolidation.py  consolidator.py  knowledge.py  local_store.py  mcp_server.py  memory_tools.py  secret_scanner.py  snapshot.py  store.py  sync.py  types.py
src/maude/middleware/: __init__.py  acl.py  concierge.py  guest_book.py
src/maude/reference/: deployment-patterns.md  maude-interaction.md  plan-execution-patterns.md  report-formatting.md  specialist-routing.md  standards-index.md
src/maude/schemas/: agent-schema.md  claude-md-schema.md  context-schema.md  frontmatter-schema.md  knowledge-schema.md  skill-schema.md
src/maude/standards/: ai-chat-persistence.md  authorship-headers.md  code-quality.md  commit-messages.md  configuration.md  database-access.md  dependency-management.md  fab-pattern.md  logging.md  mcp-first.md  port-convention.md  project-structure.md  python-style.md  testing.md
template/: README.md  pyproject.toml
template/.claude/: CLAUDE.md
template/.maude/: identity.md
template/.maude/memory/: incidents.md  patterns.md  preferences.md
template/.maude/skills/: health.md  remediation.md  triage.md
template/deploy/: 50-maude.rules  maude.env.template  maude@.service
template/src/project_mcp/: __main__.py  config.yaml  server.py
template/src/project_mcp/tools/: health.py  utils.py
template/tests/: conftest.py  test_health.py
tests/: __init__.py  conftest.py  test_acl.py  test_admin_registry.py  test_audit.py  test_autonomy_metrics.py  test_briefing.py  test_briefing_analytics.py  test_card.py  test_chat.py  test_cli.py  test_common.py  test_concierge.py  test_concierge_logger.py  test_config.py  test_correlation.py  test_cross_room_memory.py  test_db.py  test_db_pool.py  test_dependencies.py  test_deploy.py  test_diagnostic_trace.py  test_document_search.py  test_edge_traps.py  test_eval_benchmark.py  test_eval_score.py  test_event_listener.py  test_event_publisher.py  test_front_desk_mcp.py  test_front_desk_resources.py  test_guardrails.py  test_guards.py  test_guest_book.py  test_health_loop.py  test_kill_switch.py  test_knowledge_manager.py  test_lifecycle.py  test_llm_router.py  test_local_executor.py  test_local_store.py  (+38 more)
tests/fixtures/: dependencies.yaml
tests/front_desk/: test_fleet_deploy.py  test_webhook.py
(+77 files in other folders)
