[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{PROJECT}}-mcp"
version = "0.1.0"
description = "Per-project MCP server for {{PROJECT_TITLE}} (CTID {{CTID}})"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "maude",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
{{PROJECT}}-mcp = "{{PROJECT}}_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/{{PROJECT}}_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
