# Version: 1.0
# Created: 2026-03-28 MST
# Authors: John Broadway, Claude (Anthropic)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "healing-room"
version = "1.0.0"
description = "Healing Room — Maude example demonstrating the self-healing health loop"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "maude[healing]",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[project.scripts]
healing-room = "healing_room.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/healing_room"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests requiring live infrastructure",
]
